# technical-test-data-engineer

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
.moov_ia_venv/: pyvenv.cfg
.moov_ia_venv/Scripts/: activate  activate-global-python-argcomplete  activate.bat  get_gprof  get_objgraph  jp.py  nvd3-script.py  python-argcomplete-check-easy-install-script  register-python-argcomplete  undill
docs/: ANSWERS.md
src/moovia_data_streaming/sources/: airflow_data_pipeline_dags.py  utils.py
src/moovia_data_streaming/sources/infrastructure/: docker-compose-airflow.yaml  docker-compose-kafka-zookeper.yaml
src/moovia_data_streaming/sources/infrastructure/dags/: airflow_data_pipeline_dag.py  config.ini  create_table_history.sql  create_table_tracks.sql  create_table_users.sql  data_fetcher.py  kafka_stream_producer.py  music_db.db  music_db.db-journal  utils.py
src/moovia_data_streaming/sources/infrastructure/logs/scheduler/: latest
src/moovia_data_streaming/sources/kafka_streaming/: __init__.py  kafka_stream_consumer.py  stream_consumer.py  stream_producer.py
src/moovia_data_streaming/sources/sqlite/: create_tables.sql
src/moovia_data_streaming/sources/tests/: test_data_fetcher.py  test_kafka_stream_consumer.py  test_kafka_stream_producer.py
src/moovitamix_fastapi/: Changelog.md  classes_out.py  generate_fake_data.py  main.py
test/: test_classes_out.py
