[tool.poetry]
name = "technical-test-data-engineer"
version = "0.1.0"
description = ""
authors = ["Noé Sautel"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.9"
faker = "^24.2.0"
uvicorn = "^0.28.0"
apache-airflow = "^2.8.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
